Updated the package script